<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/one_player"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:text="@string/one_player"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/two_players"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/one_player"
        android:layout_alignStart="@+id/one_player"
        android:text="@string/two_player"
        android:layout_marginTop="@dimen/button_from_button"
        android:onClick="onePlayerGame"/>

    <Button
        android:id="@+id/choose_game_mode_back_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/two_players"
        android:layout_alignStart="@+id/two_players"
        android:text="@string/back_to_menu"
        android:layout_marginTop="@dimen/button_from_button"
        android:onClick="backToMenu" />
</RelativeLayout>